--- a/disjob-admin/ruoyi-admin/src/main/resources/application.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application.yml
@@ -125,7 +125,7 @@ xss:
   # 过滤开关
   enabled: true
   # 排除链接（多个用逗号分隔）
-  excludes: /system/notice/*
+  excludes: /system/notice/*,/disjob/job/add,/disjob/job/edit
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*,/disjob/*
 
